# Reference-FMUs

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  README.md  aarch64-toolchain.cmake  appveyor.yml  azure-pipelines.yml  build.py  conftest.py  dist.py  lint_files.py  merge_binaries.py  merge_platform_binaries.py  run.py  set_generation_tool.py  set_tool_version.py  synchronous_control_me_out.xlsx  template.html  test_LinearTransform.py  test_build.py  test_fmusim.py
BouncingBall/: BouncingBall_out.csv  BouncingBall_ref.csv  FMI1CS.xml  FMI1ME.xml  FMI2.xml  FMI3.xml  buildDescription.xml  config.h  fmi-ls-ref-manifest.xml  model.c  readme.html  readme.md
BouncingBallStairs/: BouncingBallStairs_ref.csv  BouncingBallStairs_ref.opt  FMI3.xml  buildDescription.xml  config.h  model.c  readme.html  readme.md
Clocks/: FMI3.xml  buildDescription.xml  config.h  model.c  readme.md
ControlledClocksCS/: FMI3.xml  buildDescription.xml  config.h  model.c  readme.md
ControlledClocksSE/: FMI3.xml  buildDescription.xml  config.h  model.c  readme.md
Controller/: Controller_ref.opt  FMI3.xml  buildDescription.xml  config.h  model.c  readme.md
Dahlquist/: Dahlquist_out.csv  Dahlquist_ref.csv  FMI1CS.xml  FMI1ME.xml  FMI2.xml  FMI3.xml  buildDescription.xml  config.h  fmi-ls-ref.xml  model.c  readme.html  readme.md
Feedthrough/: FMI1CS.xml  FMI1ME.xml  FMI2.xml  FMI3.xml  Feedthrough_in.csv  Feedthrough_in2.csv  Feedthrough_in_2.csv  Feedthrough_out.csv  Feedthrough_ref.csv  Feedthrough_ref.opt  buildDescription.xml  config.h  fmi-ls-ref.xml  model.c  plot_result.py  readme.html  readme.md
LinearTransform/: FMI3.xml  LinearTransform_in.csv  LinearTransform_ref.csv  buildDescription.xml  config.h  model.c  readme.html  readme.md
Plant/: FMI3.xml  Plant_ref.csv  buildDescription.xml  config.h  model.c  readme.md
Resource/: FMI1CS.xml  FMI1ME.xml  FMI2.xml  FMI3.xml  Resource_out.csv  Resource_ref.csv  Resource_ref.opt  buildDescription.xml  config.h  fmi-ls-ref.xml  model.c  readme.html  readme.md
Stair/: FMI1CS.xml  FMI1ME.xml  FMI2.xml  FMI3.xml  Stair_out.csv  Stair_ref.csv  buildDescription.xml  config.h  fmi-ls-ref-manifest.xml  model.c  readme.html  readme.md
StateSpace/: FMI3.xml  StateSpace_out.csv  config.h  fmi-ls-ref.xml  model.c  readme.md
Supervisor/: FMI3.xml  buildDescription.xml  config.h  model.c  readme.md
VanDerPol/: FMI1CS.xml  FMI1ME.xml  FMI2.xml  FMI3.xml  VanDerPol_out.csv  VanDerPol_ref.csv  VanDerPol_ref.opt  buildDescription.xml  config.h  fmi-ls-ref-manifest.xml  model.c  readme.html  readme.md
examples/: BouncingBall.c  BouncingBall_me.c  Clocks.c  CommunicationEventControlledClocksCS.py  CommunicationEventControlledClocksSE.py  Dahlquist.c  Examples.cmake  FMU.c  FMU.h  Feedthrough.c  LinearTransform.c  Resource.c  Stair.c  Stair_me.c  StateSpace.c  VanDerPol.c  bcs_early_return.c  bcs_intermediate_update.c  bcs_intermediate_variable_access.c  callbacks.h  co_simulation.c  connected_cs.c  cs_clocked.c  cs_early_return.c  cs_event_mode.c  cs_intermediate_update.c  cs_reconfiguration.c  hcs_early_return.c  import_shared_library.c  import_static_library.c  jacobian.c  model_exchange.c  scs_synchronous.c  scs_threaded.c  simulate_cs.c  simulate_fmi1_cs.c  simulate_fmi1_me.c  simulate_fmi2_cs.c  simulate_fmi2_me.c  simulate_fmi3_cs.c  (+8 more)
fmusim/: .gitignore  BouncingBall_in.csv  CMakeLists.txt  CVODE.c  FMI1CSSimulation.c  FMI1CSSimulation.h  FMI1MESimulation.c  FMI1MESimulation.h  FMI2CSSimulation.c  FMI2CSSimulation.h  FMI2MESimulation.c  FMI2MESimulation.h  FMI3CSSimulation.c  FMI3CSSimulation.h  FMI3CoSimulation.c  FMI3MESimulation.c  FMI3MESimulation.h  FMIBuildDescription.c  FMIBuildDescription.h  FMICSVRecorder.c  FMICSVRecorder.h  FMICVode.c  FMICVode.h  FMIDemoRecorder.c  FMIDemoRecorder.h  FMIEuler.c  FMIEuler.h  FMIModelDescription.c  FMIModelDescription.h  FMIRecorder.c  FMIRecorder.h  FMISimulation.c  FMISimulation.h  FMISimulationInput.c  FMISimulationResult.c  FMISimulationResult.h  FMISolver.h  FMIStaticInput.c  FMIStaticInput.h  FMIUtil.c  (+35 more)
fmusim-gui/: .gitignore  AbstractModelVariablesModel.cpp  AbstractModelVariablesModel.h  BuildPlatformBinaryDialog.cpp  BuildPlatformBinaryDialog.h  BuildPlatformBinaryDialog.ui  BuildPlatformBinaryThread.cpp  BuildPlatformBinaryThread.h  BuildWindowsBinaryDialog.cpp  BuildWindowsBinaryDialog.h  BuildWindowsBinaryDialog.ui  CMakeLists.txt  LICENSE.txt  LICENSE_QT.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  ModelVariablesItemModel.cpp  ModelVariablesItemModel.h  ModelVariablesTableModel.cpp  ModelVariablesTableModel.h  ModelVariablesTreeModel.cpp  ModelVariablesTreeModel.h  PlotUtil.cpp  PlotUtil.h  SimulationThread.cpp  SimulationThread.h  VariablesFilterModel.cpp  VariablesFilterModel.h  app-icon.afdesign  buttons.qrc  main.cpp  plot.html  plot.qrc  resources.qrc
fmusim-gui/buttons/: buttons.afdesign  toolbuttons.afdesign
fmusim-gui/buttons/dark/: index.theme
fmusim-gui/buttons/light/: index.theme
fmusim-gui/icons/: icons.qrc
fmusim-gui/icons/light/: variables.afdesign
fmusim-gui/icons/variables/: variables.qrc
fmusim-gui/resources/: CMakeLists.txt  app-icon.rc
fmusim-gui/resources/buttons/: buttons.afdesign  buttons.qrc
fmusim-gui/resources/icon/: icon.icns  icon.qrc  icon.rc
fmusim-gui/resources/plot/: plot.qrc
fmusim-gui/resources/tools/: tools.qrc
fmusim-gui/resources/variables/: variables.afdesign  variables.qrc
fmusim/tests/: conftest.py  notest_fmi3_cs.py  notest_parameters.py  test_parameters.py
fmusim/tests/resources/: Feedthrough_in.csv
importer/: CommunicationEventControlledClocksCS.py
include/: FMI.h  FMI1.h  FMI2.h  FMI3.h  cosimulation.h  fmi1Functions.h  fmi3FunctionTypes.h  fmi3Functions.h  fmi3PlatformTypes.h  fmiFunctions.h  fmiModelFunctions.h  model.h  namespace.h  slave.h  solver.h  structured_variable_name.tab.h
playground/: validate_fmus.py
src/: FMI.c  FMI1.c  FMI2.c  FMI3.c  README.md  calc.l  calc.tab.c  calc.tab.h  calc.y  cosimulation.c  euler.c  fmi1.c  fmi1Functions.c  (+11 more)
(+26 files in other folders)
